@@ -1,3 +1,9 @@
+2011-05-11  Tom Tromey  <tromey@redhat.com>
+
+	* dwarf2read.c (handle_data_member_location): New function.
+	(dwarf2_add_field): Use it.
+	(read_common_block): Likewise.
+
 2011-05-06  Ulrich Weigand  <uweigand@de.ibm.com>
 
 	* ppc-linux-tdep.c (ppu2spu_prev_register): Handle pseudo registers.
